fixed a bug in /photos that was causing unusual behaviour in slideshow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Home Media Server</h1>
     <video id="videoPlayer" width="650" controls muted="muted" autoplay>
-      <source src="/video" type="video/mp4" />
+      <source src="/lgvideo" type="video/mp4" />
     </video>
   </body>
 </html>
