optimized for playing videos on lg smart tv

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Home Media Server</h1>
-    <video id="videoPlayer" width="650" controls muted="muted" autoplay>
-      <source src="/lgvideo" type="video/mp4" />
+    <video id="videoPlayer" width="650" controls autoplay>
+      <source src="http://192.168.31.173:8000/lg" type="video/mp4" />
     </video>
   </body>
 </html>
